--- a/web/index.html
+++ b/web/index.html
@@ -1,49 +1,49 @@
 <!-- #######  YAY, I AM THE SOURCE EDITOR! #########-->
 <h1 style="color: #5e9ca0; text-align: center;">Robofun Summer 2016</h1>
-<p class="c16 c24"><span class="c7 c15">Gorillerrr: A game based on Frogger</span></p>
-<p class="c10 c24">&nbsp;</p>
-<p class="c10 c24">&nbsp;</p>
-<p>&nbsp;</p>
-<p><strong><iframe style="display: block; margin-left: auto; margin-right: auto;" src="https://www.youtube.com/embed/Nlbft7x9grY" width="560" height="315" frameborder="0" allowfullscreen="allowfullscreen"></iframe></strong></p>
-<p>&nbsp;</p>
+<p class="c16 c24" style="text-align: center;"><span class="c7 c15">Gorillerrr: A game based on Frogger</span></p>
+<p class="c10 c24" style="text-align: center;">&nbsp;</p>
+<p class="c10 c24" style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;"><strong><iframe style="display: block; margin-left: auto; margin-right: auto;" src="https://www.youtube.com/embed/Nlbft7x9grY" width="560" height="315" frameborder="0" allowfullscreen="allowfullscreen"></iframe></strong></p>
+<p style="text-align: center;">&nbsp;</p>
 <h1 style="text-align: center;"><strong>Challenge: </strong></h1>
 <h3 style="text-align: center;"><span style="font-weight: 400;">Create and program a bluetooth controlled walking gorilla that tries to cross road without getting hit by robot vehicles. &nbsp;This is a game inspired by the Video Game FROGGER.</span></h3>
-<p class="c10">&nbsp;</p>
-<p class="c16 c24"><span style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 452.71px; height: 276.50px;"><img style="width: 452.71px; height: 276.50px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);" title="" src="images/image01.gif" alt="ezgif.com-crop.gif" /></span></p>
-<p class="c10 c24">&nbsp;</p>
-<p class="c10">&nbsp;</p>
-<p class="c16"><span class="c0 c7">Blueprints needed: </span></p>
-<ul class="c5 lst-kix_bkswurk8fdd4-0 start">
+<p class="c10" style="text-align: center;">&nbsp;</p>
+<p class="c16 c24" style="text-align: center;"><span style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 452.71px; height: 276.50px;"><img style="width: 452.71px; height: 276.50px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);" title="" src="images/image01.gif" alt="ezgif.com-crop.gif" /></span></p>
+<p class="c10 c24" style="text-align: center;">&nbsp;</p>
+<p class="c10" style="text-align: center;">&nbsp;</p>
+<p class="c16" style="text-align: center;"><span class="c0 c7">Blueprints needed: </span></p>
+<ul class="c5 lst-kix_bkswurk8fdd4-0 start" style="text-align: center;">
 <li class="c16 c22"><span class="c0">Buddy Bot</span></li>
 <li class="c16 c22"><span class="c0">Gorilla Bot</span></li>
 </ul>
-<p class="c16"><span class="c0 c7">Concepts that should be covered: </span></p>
-<ul class="c5 lst-kix_xq1ygwee91fi-0 start">
+<p class="c16" style="text-align: center;"><span class="c0 c7">Concepts that should be covered: </span></p>
+<ul class="c5 lst-kix_xq1ygwee91fi-0 start" style="text-align: center;">
 <li class="c16 c22"><span class="c0">Piece ID</span></li>
 <li class="c16 c22"><span class="c0">What is a robot?</span></li>
 <li class="c16 c22"><span class="c0">What are the inputs and outputs?</span></li>
 <li class="c16 c22"><span class="c0">What does a motor do?</span></li>
 <li class="c16 c22"><span class="c0">Bluetooth - sending and receiving messages</span></li>
 </ul>
-<p class="c16"><span class="c0 c7">Prior to starting:</span></p>
-<ul class="c5 lst-kix_2j0vwykh0okm-0 start">
+<p class="c16" style="text-align: center;"><span class="c0 c7">Prior to starting:</span></p>
+<ul class="c5 lst-kix_2j0vwykh0okm-0 start" style="text-align: center;">
 <li class="c16 c22"><span class="c0">Have EV3 bricks paired via bluetooth. &nbsp;Label both EV3 bricks: Gorilla 1 / Controller 1, Gorilla 2 / Controller 2, etc..</span></li>
 <li class="c16 c22"><span class="c0">Review bluetooth guide</span></li>
 </ul>
-<p class="c10">&nbsp;</p>
-<p class="c16"><span class="c0 c7">How the game Works</span></p>
-<p class="c16"><span class="c0">Students will controll Gorilla robot with a bluetooth controller, and try to cross the &ldquo;road&rdquo;.</span></p>
-<p class="c16"><span class="c0">2-3 other buddy bots will move back and forth. The Buddy Bots will have a sensor that will make them reverse direction when they hit a wall. &nbsp;</span></p>
-<p class="c16"><span class="c0">If Gorilla gets across without getting hit he wins. &nbsp;If he gets hit by Buddy Bot he losses. &nbsp;</span></p>
-<p class="c10">&nbsp;</p>
-<p class="c10">&nbsp;</p>
-<p class="c16 c24"><span style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 623.98px; height: 359.99px;"><img style="width: 623.98px; height: 359.99px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);" title="" src="images/image05.png" alt="" /></span></p>
-<p class="c10 c24">&nbsp;</p>
-<p class="c16"><span class="c0 c7">Suggested Structure &nbsp;</span></p>
-<p class="c16"><span class="c0 c7">for 2 Different Teams - Gorillas and Buddy Bots</span></p>
-<p class="c10">&nbsp;</p>
-<p><a id="t.e64fcaabe1967f3e35ef5737c2d22edba2b376b7"></a><a id="t.0"></a></p>
-<table class="c11">
+<p class="c10" style="text-align: center;">&nbsp;</p>
+<p class="c16" style="text-align: center;"><span class="c0 c7">How the game Works</span></p>
+<p class="c16" style="text-align: center;"><span class="c0">Students will controll Gorilla robot with a bluetooth controller, and try to cross the &ldquo;road&rdquo;.</span></p>
+<p class="c16" style="text-align: center;"><span class="c0">2-3 other buddy bots will move back and forth. The Buddy Bots will have a sensor that will make them reverse direction when they hit a wall. &nbsp;</span></p>
+<p class="c16" style="text-align: center;"><span class="c0">If Gorilla gets across without getting hit he wins. &nbsp;If he gets hit by Buddy Bot he losses. &nbsp;</span></p>
+<p class="c10" style="text-align: center;">&nbsp;</p>
+<p class="c10" style="text-align: center;">&nbsp;</p>
+<p class="c16 c24" style="text-align: center;"><span style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 623.98px; height: 359.99px;"><img style="width: 623.98px; height: 359.99px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);" title="" src="images/image05.png" alt="" /></span></p>
+<p class="c10 c24" style="text-align: center;">&nbsp;</p>
+<p class="c16" style="text-align: center;"><span class="c0 c7">Suggested Structure &nbsp;</span></p>
+<p class="c16" style="text-align: center;"><span class="c0 c7">for 2 Different Teams - Gorillas and Buddy Bots</span></p>
+<p class="c10" style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
+<table class="c11" style="border-color: black; margin-left: auto; margin-right: auto;" border="5">
 <tbody>
 <tr class="c9">
 <td class="c27" colspan="1" rowspan="1">
@@ -138,11 +138,11 @@
 </tr>
 </tbody>
 </table>
-<p class="c10">&nbsp;</p>
-<p class="c10">&nbsp;</p>
-<p class="c10">&nbsp;</p>
-<p><a id="t.ab79c514084912ecab355a59d8d9e166e22e418d"></a><a id="t.1"></a></p>
-<table class="c11">
+<p class="c10" style="text-align: center;">&nbsp;</p>
+<p class="c10" style="text-align: center;">&nbsp;</p>
+<p class="c10" style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
+<table class="c11" style="margin-left: auto; margin-right: auto;">
 <tbody>
 <tr class="c9">
 <td class="c14" colspan="1" rowspan="1">
@@ -169,12 +169,12 @@
 </tr>
 </tbody>
 </table>
-<p class="c10">&nbsp;</p>
-<p class="c10">&nbsp;</p>
-<p class="c10">&nbsp;</p>
-<p class="c10">&nbsp;</p>
-<p><a id="t.0180b9045e113870292741937076b8fde0e9827b"></a><a id="t.2"></a></p>
-<table class="c11">
+<p class="c10" style="text-align: center;">&nbsp;</p>
+<p class="c10" style="text-align: center;">&nbsp;</p>
+<p class="c10" style="text-align: center;">&nbsp;</p>
+<p class="c10" style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
+<table class="c11" style="margin-left: auto; margin-right: auto;">
 <tbody>
 <tr class="c9">
 <td class="c14" colspan="1" rowspan="1">
@@ -200,10 +200,10 @@
 </tr>
 </tbody>
 </table>
-<p class="c10">&nbsp;</p>
-<p class="c10">&nbsp;</p>
-<p><a id="t.5c5796b6841d3ea950ac92e27bc22a1339a6011e"></a><a id="t.3"></a></p>
-<table class="c11">
+<p class="c10" style="text-align: center;">&nbsp;</p>
+<p class="c10" style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
+<table class="c11" style="margin-left: auto; margin-right: auto;">
 <tbody>
 <tr class="c9">
 <td class="c14" colspan="1" rowspan="1">
@@ -227,7 +227,7 @@
 </tr>
 </tbody>
 </table>
-<p class="c10">&nbsp;</p>
-<p class="c10">&nbsp;</p>
-<p class="c10">&nbsp;</p>
-<p class="c16 c24"><span style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 542.50px; height: 410.59px;"><img style="width: 542.50px; height: 410.59px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);" title="" src="images/image04.gif" alt="giphy.gif" /></span></p>
+<p class="c10" style="text-align: center;">&nbsp;</p>
+<p class="c10" style="text-align: center;">&nbsp;</p>
+<p class="c10" style="text-align: center;">&nbsp;</p>
+<p class="c16 c24"><span style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 542.50px; height: 410.59px;"><img style="width: 542.5px; height: 410.59px; margin-left: auto; margin-top: 0px; transform: rotate(0rad) translateZ(0px); display: block; margin-right: auto;" title="" src="images/image04.gif" alt="giphy.gif" /></span></p>
