--- a/web/index.html
+++ b/web/index.html
@@ -11,30 +11,30 @@
 <p class="c10" style="text-align: center;">&nbsp;</p>
 <p class="c16 c24" style="text-align: center;"><span style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 452.71px; height: 276.50px;"><img style="width: 452.71px; height: 276.50px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);" title="" src="images/image01.gif" alt="ezgif.com-crop.gif" /></span></p>
 <p class="c10 c24" style="text-align: center;">&nbsp;</p>
-<p class="c10" style="text-align: center;">&nbsp;</p>
-<p class="c16" style="text-align: center;"><span class="c0 c7">Blueprints needed: </span></p>
-<ul class="c5 lst-kix_bkswurk8fdd4-0 start" style="text-align: center;">
+<p class="c10" style="text-align: left;">&nbsp;</p>
+<p class="c16" style="text-align: left;"><strong><span class="c0 c7">Blueprints needed: </span></strong></p>
+<ul class="c5 lst-kix_bkswurk8fdd4-0 start" style="text-align: left;">
 <li class="c16 c22"><span class="c0">Buddy Bot</span></li>
 <li class="c16 c22"><span class="c0">Gorilla Bot</span></li>
 </ul>
-<p class="c16" style="text-align: center;"><span class="c0 c7">Concepts that should be covered: </span></p>
-<ul class="c5 lst-kix_xq1ygwee91fi-0 start" style="text-align: center;">
+<p class="c16" style="text-align: left;"><strong><span class="c0 c7">Concepts that should be covered: </span></strong></p>
+<ul class="c5 lst-kix_xq1ygwee91fi-0 start" style="text-align: left;">
 <li class="c16 c22"><span class="c0">Piece ID</span></li>
 <li class="c16 c22"><span class="c0">What is a robot?</span></li>
 <li class="c16 c22"><span class="c0">What are the inputs and outputs?</span></li>
 <li class="c16 c22"><span class="c0">What does a motor do?</span></li>
 <li class="c16 c22"><span class="c0">Bluetooth - sending and receiving messages</span></li>
 </ul>
-<p class="c16" style="text-align: center;"><span class="c0 c7">Prior to starting:</span></p>
+<p class="c16" style="text-align: left;"><strong><span class="c0 c7">Prior to starting:</span></strong></p>
 <ul class="c5 lst-kix_2j0vwykh0okm-0 start" style="text-align: center;">
-<li class="c16 c22"><span class="c0">Have EV3 bricks paired via bluetooth. &nbsp;Label both EV3 bricks: Gorilla 1 / Controller 1, Gorilla 2 / Controller 2, etc..</span></li>
-<li class="c16 c22"><span class="c0">Review bluetooth guide</span></li>
+<li class="c16 c22" style="text-align: left;"><span class="c0">Have EV3 bricks paired via bluetooth. &nbsp;Label both EV3 bricks: Gorilla 1 / Controller 1, Gorilla 2 / Controller 2, etc..</span></li>
+<li class="c16 c22" style="text-align: left;"><span class="c0">Review bluetooth guide</span></li>
 </ul>
 <p class="c10" style="text-align: center;">&nbsp;</p>
-<p class="c16" style="text-align: center;"><span class="c0 c7">How the game Works</span></p>
-<p class="c16" style="text-align: center;"><span class="c0">Students will controll Gorilla robot with a bluetooth controller, and try to cross the &ldquo;road&rdquo;.</span></p>
-<p class="c16" style="text-align: center;"><span class="c0">2-3 other buddy bots will move back and forth. The Buddy Bots will have a sensor that will make them reverse direction when they hit a wall. &nbsp;</span></p>
-<p class="c16" style="text-align: center;"><span class="c0">If Gorilla gets across without getting hit he wins. &nbsp;If he gets hit by Buddy Bot he losses. &nbsp;</span></p>
+<p class="c16" style="text-align: left;"><strong><span class="c0 c7">How the game Works</span></strong></p>
+<p class="c16" style="text-align: left;"><span class="c0">Students will controll Gorilla robot with a bluetooth controller, and try to cross the &ldquo;road&rdquo;.</span></p>
+<p class="c16" style="text-align: left;"><span class="c0">2-3 other buddy bots will move back and forth. The Buddy Bots will have a sensor that will make them reverse direction when they hit a wall. &nbsp;</span></p>
+<p class="c16" style="text-align: left;"><span class="c0">If Gorilla gets across without getting hit he wins. &nbsp;If he gets hit by Buddy Bot he losses. &nbsp;</span></p>
 <p class="c10" style="text-align: center;">&nbsp;</p>
 <p class="c10" style="text-align: center;">&nbsp;</p>
 <p class="c16 c24" style="text-align: center;"><span style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 623.98px; height: 359.99px;"><img style="width: 623.98px; height: 359.99px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);" title="" src="images/image05.png" alt="" /></span></p>
@@ -43,7 +43,7 @@
 <p class="c16" style="text-align: center;"><span class="c0 c7">for 2 Different Teams - Gorillas and Buddy Bots</span></p>
 <p class="c10" style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
-<table class="c11" style="border-color: black; margin-left: auto; margin-right: auto;" border="5">
+<table class="c11" style="border-color: black; float: left;" border="5">
 <tbody>
 <tr class="c9">
 <td class="c27" colspan="1" rowspan="1">
@@ -139,14 +139,11 @@
 </tbody>
 </table>
 <p class="c10" style="text-align: center;">&nbsp;</p>
-<p class="c10" style="text-align: center;">&nbsp;</p>
-<p class="c10" style="text-align: center;">&nbsp;</p>
-<p style="text-align: center;">&nbsp;</p>
-<table class="c11" style="margin-left: auto; margin-right: auto;">
+<table class="c11" style="border-color: black; margin-left: auto; margin-right: auto;" border="5">
 <tbody>
 <tr class="c9">
 <td class="c14" colspan="1" rowspan="1">
-<p class="c8"><span class="c4 c0">Wednesday</span></p>
+<p class="c8" style="text-align: left;"><span class="c4 c0">Wednesday</span></p>
 <ul class="c5 lst-kix_o8e7btv8reeb-0">
 <li class="c3"><span class="c1 c0">Both groups finish up their program.</span></li>
 <li class="c3"><span class="c1 c0">Setup 2 Game course. &nbsp;</span></li>
@@ -164,17 +161,13 @@
 <p class="c12"><span class="c0 c7 c17">Gorillarrr Course</span></p>
 <p class="c2">&nbsp;</p>
 <p class="c2">&nbsp;</p>
-<p class="c6">&nbsp;</p>
+<p class="c6">&nbsp;&nbsp;</p>
 </td>
 </tr>
 </tbody>
 </table>
-<p class="c10" style="text-align: center;">&nbsp;</p>
-<p class="c10" style="text-align: center;">&nbsp;</p>
-<p class="c10" style="text-align: center;">&nbsp;</p>
-<p class="c10" style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
-<table class="c11" style="margin-left: auto; margin-right: auto;">
+<table class="c11" style="border-color: black; float: left;" border="5">
 <tbody>
 <tr class="c9">
 <td class="c14" colspan="1" rowspan="1">
@@ -202,8 +195,13 @@
 </table>
 <p class="c10" style="text-align: center;">&nbsp;</p>
 <p class="c10" style="text-align: center;">&nbsp;</p>
+<p class="c10" style="text-align: center;">&nbsp;</p>
+<p class="c10" style="text-align: center;">&nbsp;</p>
+<p class="c10" style="text-align: center;">&nbsp;</p>
+<p class="c10" style="text-align: center;">&nbsp;</p>
+<p class="c10" style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
-<table class="c11" style="margin-left: auto; margin-right: auto;">
+<table class="c11" style="border-color: black; margin-left: auto; margin-right: auto;" border="5">
 <tbody>
 <tr class="c9">
 <td class="c14" colspan="1" rowspan="1">
